[add] 메인페이지(Home)의 메인베너 컴포넌트 추가

--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,6 +1,7 @@
 @import '../../../index.scss';
 
 .Header {
+  z-index: 9999;
   background-color: #fff;
   .header-container {
     width: $g-v-max-width;
